Rename .menu to .nav and tweak link hover
Update style.css: replace .menu selector with .nav, shorten the link transition from 1s to 0.3s, and modify the hover state to increase visibility (opacity: 5) and apply a hover color (#f4e8dc). These adjustments make nav link hover feedback faster and add a defined hover color.

--- a/style.css
+++ b/style.css
@@ -46,13 +46,14 @@ body {
     opacity: 0.7;
 }
 
-.menu a{
-    transition: 1s;
+.nav a{
+    transition: 0.3s;
 }
 
-.menu a:hover{
+.nav a:hover{
     transform: scale(1.1);
     opacity: 5;
+    color: #f4e8dc;
 
 }
 
